# labellisation

./: .gitignore  CMakeLists.txt  README.md  TODO.md  USAGE.md
.claude/: settings.local.json
benchmarks/: benchmark.cpp  benchmark.py  complexity_benchmark.py  generate_graphs.py  generate_report_pdf.py  run_all.py  scientific_benchmark.py
benchmarks/results/: benchmark_results.csv  complexity_results.csv  rapport_benchmark.txt
docs/: README.md
docs/presentation/: PRESENTATION.md  presentation.tex
docs/rapport/: RAPPORT.md  rapport.tex
images/input/: .gitkeep  GettyImages-1273584292-cbcd5f85f4c646d58f7a7fa158dcaaeb.pgm
images/output/: .gitkeep
src/: __init__.py  main.cpp  main.py
src/algorithms/: Kruskal.cpp  Kruskal.h  Prim.cpp  Prim.h  TwoPass.cpp  TwoPass.h  UnionFind.cpp  UnionFind.h  __init__.py  kruskal.py  prim.py  two_pass.py  union_find.py
src/core/: Image.cpp  Image.h  __init__.py  image.py
src/io/: ImageIO.cpp  ImageIO.h
src/readers/: __init__.py  image_io.py
src/utils/: Utils.cpp  Utils.h  __init__.py  utils.py
